--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.6.0",
     "better-sqlite3": "^11.0.0",
-    "marked": "^14.1.0"
+    "marked": "^14.1.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/better-sqlite3": "^7.6.9",
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
