已将服务切换为支持 HTTP 模式（Express + CORS），并保留 STDIO 模式用于本地。 新增根路径 JSON-RPC 端点 /（支持 tools/list, tools/call, resources/list, resources/read, prompts/list, prompts/get）和健康检查 /health。 认证通过 X-MCP-Auth 强制启用。 修正 learning_plan Prompt 的参数名为 topic。 本地端到端验证成功： /health 返回 200。 tools/list 正常返回工具列表。 tools/call -> todo_add 正常创建任务并返回结果。

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -2,10 +2,7 @@
   "mcpServers": {
     "learning-manager": {
       "command": "node",
-      "args": ["/Users/shizhiyun/Documents/Git/Todo&PlanMCP/dist/index.js"],
-      "env": {
-        "NODE_ENV": "production"
-      }
+      "args": ["/Users/shizhiyun/Documents/Git/Todo&PlanMCP/dist/index.js"]
     }
   }
 }
