--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,12 @@ services:
       - NODE_ENV=production
       - MCP_HOST=0.0.0.0
       - MCP_PORT=3000
+      - MCP_AUTH_TOKEN=${MCP_AUTH_TOKEN}
     volumes:
       - ./data:/app/data
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "node", "-e", "process.exit(0)"]
+      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/health', res => process.exit(res.statusCode===200?0:1)).on('error',()=>process.exit(1));"]
       interval: 30s
       timeout: 10s
       retries: 3
